--- a/src/content/blog/the-completeish-history-of-the-computer.mdx
+++ b/src/content/blog/the-completeish-history-of-the-computer.mdx
@@ -26,10 +26,6 @@ Why is a standard keyboard, well, standard? What came before our familiar QWERTY
 
 Here is my attempt at understanding how and why we got to this point. I dug myself into the depths of a rabbit hole, and now I must crawl back out.
 
-Thanks for reading whimsical wednesdays! Subscribe for free to receive new posts and support my work.
-
-Subscribe
-
 # Table of Contents
 
 ####  **I. The Pre-Mechanical Era**
@@ -433,4 +429,4 @@ As for me, I'm just here to see how far this niche can go. I'm on a keyboard for
 
 <FootnoteRef n="2" client:idle>You might have seen the [famous 1984 Super Bowl ad](https://www.youtube.com/watch?v=ErwS24cBZPc) for the Macintosh!</FootnoteRef>
 
-<FootnoteRef n="3" client:idle>I have no relation to the Alpine65 or Bitmap Studios, I just think they're neat!</FootnoteRef>
+<FootnoteRef n="3" client:idle>I have no relation to the Alpine65 or Bitmap Studios, it was just a convenient example to use!</FootnoteRef>
