--- a/src/content/root/colophon.mdx
+++ b/src/content/root/colophon.mdx
@@ -15,7 +15,7 @@ If you’d like more context, on why I rebuild my website every year, you may re
 
 ## colors
 
-This website uses a custom color palette designed as a distillation of the colors in my physical room space.
+This website uses a custom color palette designed as a distillation of the colors in my [physical room space](https://garden.bencuan.me/guides/notes-on-interior-design).
 
 | color | hex | pantone |
 |-------|----------|---------|
@@ -29,7 +29,7 @@ This website uses a custom color palette designed as a distillation of the color
 
 ## typography
 
-Headers are set in <span style={{ fontFamily: 'Pangaia, sans-serif' }}>Pangaia</span>, body text is set in <span style={{ fontFamily: 'Eiko, serif' }}>Eiko</span>, and UI elements are set in <span style={{ fontFamily: 'Fraktion, sans-serif' }}>fraktion sans</span>.
+Headers are set in <span style={{ fontFamily: 'Pangaia, sans-serif' }}>Pangaia</span>, body text is set in <span style={{ fontFamily: 'Eiko, serif', fontWeight: '500' }}>Eiko</span>, and UI elements are set in <span style={{ fontFamily: 'Fraktion, sans-serif', fontWeight: '500' }}>fraktion sans</span>.
 
 Sizing is calculated with a modified version of [Fluid Typography](https://fluidtypography.com/).
 
