--- a/src/content/root/colophon.mdx
+++ b/src/content/root/colophon.mdx
@@ -2,6 +2,7 @@
 title: colophon
 description: how it's made™ bencuan.me edition
 slug: colophon
+date: 2025-12-28
 ---
 import { PhosphorLogo } from "@phosphor-icons/react";
 
