some light formatting

--- a/src/content/root/colophon.mdx
+++ b/src/content/root/colophon.mdx
@@ -5,18 +5,19 @@ slug: colophon
 date: 2025-12-28
 ---
 import { PhosphorLogo } from "@phosphor-icons/react";
+import { MDLink } from '../../components/links.tsx';
 
 
 <br/>
-This website is built with [Astro](https://astro.build) and served via GitHub Pages. You can view the source code [here](https://github.com/64bitpandas/bencuan.me).
+This website is built with <MDLink href="https://astro.build">Astro</MDLink> and served via GitHub Pages. You can view the source code <MDLink href="https://github.com/64bitpandas/bencuan.me">here</MDLink>.
 
-For those of you who may enjoy additional commentary on colophons, feel free to visit [the Garden’s article on colophons](https://garden.bencuan.me/internet/colophons).
+For those of you who may enjoy additional commentary on colophons, feel free to visit <MDLink href="https://garden.bencuan.me/internet/colophons">the Garden's article on colophons</MDLink>.
 
-If you’d like more context, on why I rebuild my website every year, you may read [my post on the history of bencuan.me](https://garden.bencuan.me/about/The-history-of-bencuan.me).
+If you’d like more context, on why I rebuild my website every year, you may read <MDLink href="https://garden.bencuan.me/about/The-history-of-bencuan.me">my post on the history of bencuan.me</MDLink>.
 
 ## colors
 
-This website uses a custom color palette designed as a distillation of the colors in my [physical room space](https://garden.bencuan.me/guides/notes-on-interior-design).
+This website uses a custom color palette designed as a distillation of the colors in my <MDLink href="https://garden.bencuan.me/guides/notes-on-interior-design">physical room space</MDLink>. You can view more of my color palettes on the <MDLink href="https://bencuan.me/colors">colors page</MDLink>.
 
 | color | hex | pantone |
 |-------|----------|---------|
@@ -32,12 +33,12 @@ This website uses a custom color palette designed as a distillation of the color
 
 Headers are set in <span style={{ fontFamily: 'Pangaia, sans-serif' }}>Pangaia</span>, body text is set in <span style={{ fontFamily: 'Eiko, serif', fontWeight: '500' }}>Eiko</span>, and UI elements are set in <span style={{ fontFamily: 'Fraktion, sans-serif', fontWeight: '500' }}>fraktion sans</span>.
 
-Sizing is calculated with a modified version of [Fluid Typography](https://fluidtypography.com/).
+Sizing is calculated with a modified version of <MDLink href="https://fluidtypography.com/">Fluid Typography</MDLink>.
 
-All fonts are designed by [Pangram Pangram](https://pangrampangram.com), and licensed for personal use.
+All fonts are designed by <MDLink href="https://pangrampangram.com">Pangram Pangram</MDLink>, and licensed for personal use.
 
 ## iconography
 
-<PhosphorLogo /> This website uses [Phosphor Icons](https://phosphoricons.com/). 
+<PhosphorLogo /> This website uses <MDLink href="https://phosphoricons.com/">Phosphor Icons</MDLink>. 
 
-<img src="/img/kevin2.png" alt="Kevin the Dinosaur" style={{ display: 'inline', height: '1.5em', verticalAlign: 'middle', margin: '0', position: 'relative', top: '-3px' }} /> Kevin the Dinosaur was hand-drawn by myself using [Procreate](https://procreate.com/).
+<img src="/img/kevin2.png" alt="Kevin the Dinosaur" style={{ display: 'inline', height: '1.5em', verticalAlign: 'middle', margin: '0', position: 'relative', top: '-3px' }} /> Kevin the Dinosaur was hand-drawn by myself using <MDLink href="https://procreate.com/">Procreate</MDLink>.
