--- a/src/content/blog/club-penguin-is-kil.mdx
+++ b/src/content/blog/club-penguin-is-kil.mdx
@@ -4,7 +4,8 @@ description: the life and death of a legendary childhood game
 image: club-penguin-is-kil/8a38f192-e9a1-4965-9d51-1ca6ef380281_1000x591.png
 date: 2024-04-04
 slug: clubpenguin
-category: history
+tags: history
+category: play
 ---
 
 Once a week in elementary school, we'd leave our classrooms and walk over to the computer lab for computer class. Our teacher would dash around the rows and rows of squircly white iMac G5's, frantically trying to get us to follow the instructions instead of clone stamping a million cows in Kid Pix.
