--- a/src/content/blog/sfstreets.mdx
+++ b/src/content/blog/sfstreets.mdx
@@ -4,7 +4,8 @@ description: one day, one city, 40 neighborhoods, 5000 words
 image: sfstreets-route/sfstreets.png
 date: 2024-08-25
 slug: sfstreets
-category: experiments
+tags: experiments
+category: play
 ---
 
 ![birds eye view of san francisco from an airplane](/img/sfstreets/72f437a9-b61b-4c27-991c-e16f6f3eef8f_1041x551.png)
