--- a/src/content/blog/the-future-of-bay-area-transit.mdx
+++ b/src/content/blog/the-future-of-bay-area-transit.mdx
@@ -4,7 +4,8 @@ description: a macrodose of cautious optimism
 image: the-future-of-bay-area-transit/cd0d21eb-9892-48a7-a31c-a1b52741e8c0_1506x579.png
 date: 2024-11-27
 slug: transit
-category: history
+tags: history
+category: publications
 ---
 
 
