--- a/src/content/blog/turtlenet.mdx
+++ b/src/content/blog/turtlenet.mdx
@@ -4,7 +4,8 @@ description: ""
 image: opengraph/turtlenet.png
 date: 2023-06-15
 slug: turtlenet
-category: tech
+tags: tech
+category: publications
 ---
 import { MDLink } from '../../components/links.tsx';
 
